// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders body only 1`] = `
<Comment
  author={
    Object {
      "username": null,
    }
  }
  body="Woof"
  createdAt="1995-12-17T03:24:00.000Z"
/>
`;

exports[`renders username and body 1`] = `
<Comment
  author={
    Object {
      "username": "Marvin",
    }
  }
  body="Woof"
  createdAt="1995-12-17T03:24:00.000Z"
  id="comment-id"
/>
`;
